--- a/.github/workflows/addPullrequest.yml
+++ b/.github/workflows/addPullrequest.yml
@@ -15,5 +15,5 @@ jobs:
       - uses: alex-page/github-project-automation-plus@v0.3.0
         with:
           project: testProject
-          column: ToDo
+          column: Todo
           repo-token: ${{ secrets.PAT }}
