--- a/.github/workflows/addPullrequest.yml
+++ b/.github/workflows/addPullrequest.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
       - uses: alex-page/github-project-automation-plus@v0.8.1
         with:
-          project: testProject
-          column: Todo
+          project: TestDelevelop/testProject
+          column: To Do
           repo-token: ${{ secrets.PAT }}
