--- a/.github/workflows/update-projects-at-prreview.yml
+++ b/.github/workflows/update-projects-at-prreview.yml
@@ -12,5 +12,5 @@ jobs:
     steps:
       - name: レビュー情報取得
         run: |
-          test=${{toJSON(github.event.review)}}
+          test=${{toJSON(github)}}
           echo $test
