--- a/.github/workflows/update-projects-at-prreview.yml
+++ b/.github/workflows/update-projects-at-prreview.yml
@@ -19,5 +19,5 @@ jobs:
 
       - name: Use Count
         run: |
-          test=steps.reviews.outputs.approved
+          test=${{steps.reviews.outputs.approved}}
           echo $test
