--- a/.github/workflows/update-projects-at-prreview.yml
+++ b/.github/workflows/update-projects-at-prreview.yml
@@ -22,4 +22,5 @@ jobs:
           test=${{steps.reviews.outputs.approved}}
           echo "approved:${{steps.reviews.outputs.approved}}"
           echo "requested:${{steps.reviews.outputs.changes_requested}}"
+          echo "commented:${{steps.reviews.outputs.commented}}"
           echo "dismissed:${{steps.reviews.outputs.dismissed}}"
