--- a/.github/workflows/update-projects-at-prreview.yml
+++ b/.github/workflows/update-projects-at-prreview.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Use Count
         run: |
-          echo "approved:${{steps.reviews.outputs.approved}}"
-          echo "requested:${{steps.reviews.outputs.changes_requested}}"
-          echo "commented:${{steps.reviews.outputs.commented}}"
-          echo "dismissed:${{steps.reviews.outputs.dismissed}}"
+          echo "approved:${{steps.reviews.outputs.assigned.approved}}"
+          echo "requested:${{steps.reviews.outputs.assigned.changes_requested}}"
+          echo "commented:${{steps.reviews.outputs.assigned.commented}}"
+          echo "dismissed:${{steps.reviews.outputs.assigned.dismissed}}"
