--- a/.github/workflows/update-projects-at-prreview.yml
+++ b/.github/workflows/update-projects-at-prreview.yml
@@ -23,5 +23,6 @@ jobs:
           echo "requested:${{steps.reviews.outputs.assigned.changes_requested}}"
           echo "commented:${{steps.reviews.outputs.assigned.commented}}"
           echo "dismissed:${{steps.reviews.outputs.assigned.dismissed}}"
-          echo ${{github.event.review._link.pull_request.href}}
+          test=${{toJSON(github.event.review)}}
+          echo $test
         # echo $(curl -s ${{github.event.review._link.pull_request}})
