--- a/.github/workflows/addPullrequest.yml
+++ b/.github/workflows/addPullrequest.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Get Project data
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
           ORGANIZATION: ${{ secrets.ORGANIZATION }}
           PROJECT_NUMBER: 1
         run: |
@@ -46,7 +46,7 @@ jobs:
 
       - name: Add PR to Projects
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
           PR_ID: ${{ github.event.pull_request.node_id }}
         run: |
           item_id="$( gh api graphql -f query='
