--- a/.github/workflows/addPullrequest.yml
+++ b/.github/workflows/addPullrequest.yml
@@ -108,4 +108,4 @@ jobs:
                   id
                 }
               }
-            }' -f project=$PROJECT_ID -f item=$ITEM_ID -f redmine_field=$STATUS_FIELD_ID -f redmine_value="${{ env.Rredmine_link }}" -f date_field=$DATE_FIELD_ID -f date_value=$DATE --silent
+            }' -f project=$PROJECT_ID -f item=$ITEM_ID -f redmine_field=$STATUS_FIELD_ID -f redmine_value='${{ env.Rredmine_link }}' -f date_field=$DATE_FIELD_ID -f date_value=$DATE --silent
