--- a/.github/workflows/addPullrequest.yml
+++ b/.github/workflows/addPullrequest.yml
@@ -84,7 +84,7 @@ jobs:
               $date_field: ID!
               $date_value: Date!
             ) {
-              set_status: updateProjectV2ItemFieldValue(input: {
+              set_redmine: updateProjectV2ItemFieldValue(input: {
                 projectId: $project
                 itemId: $item
                 fieldId: $redmine_field
@@ -108,4 +108,4 @@ jobs:
                   id
                 }
               }
-            }' -f project=$PROJECT_ID -f item=$ITEM_ID -f redmine_field=$STATUS_FIELD_ID -f redmine_value='${{ env.Rredmine_link }}' -f date_field=$DATE_FIELD_ID -f date_value=$DATE --silent
+            }' -f project=$PROJECT_ID -f item=$ITEM_ID -f redmine_field=$REDMINE_FIELD_ID -f redmine_value=${{ env.Rredmine_link }} -f date_field=$DATE_FIELD_ID -f date_value=$DATE --silent
