--- a/.github/workflows/addPullrequest.yml
+++ b/.github/workflows/addPullrequest.yml
@@ -65,6 +65,8 @@ jobs:
 
       - name: Get TICKET and Create Redmine link
         run: |
+          test=$(git rev-parse --abbrev-ref HEAD)
+          echo $test
           TICKET=$(git rev-parse --abbrev-ref HEAD | grep -Eo '^(\w+/)?(\w+[-_])?[0-9]+' | grep -Eo '(\w+[-])?[0-9]+' | tr "[:lower:]" "[:upper:]")
           echo $TICKET
         # echo "REDMINE=https://redmine.precs.jp/issues/${TICKET}">> $GITHUB_ENV
