--- a/.github/workflows/addPullrequest.yml
+++ b/.github/workflows/addPullrequest.yml
@@ -12,6 +12,11 @@ jobs:
 
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+            repository: ${{ secrets.ORGANIZATION }}/editProjects2
+            path: ./
+            ref: main
+            token: '${{ secrets.PAT }}'
 
       - name: Get Project data
         env:
