--- a/.github/workflows/addPullrequest.yml
+++ b/.github/workflows/addPullrequest.yml
@@ -6,16 +6,12 @@ on:
       - ready_for_review
 
 jobs:
-  track_pr:
+  build:
     runs-on: ubuntu-latest
     steps:
 
       - name: Checkout repo
         uses: actions/checkout@v3
-        with:
-            repository: ${{ secrets.ORGANIZATION }}/editProjects2
-            path: ./
-            token: '${{ secrets.PAT }}'
 
       - name: Get Project data
         env:
