--- a/.github/workflows/addPullrequest.yml
+++ b/.github/workflows/addPullrequest.yml
@@ -15,8 +15,8 @@ jobs:
         
       - name: Get TICKET and Create Redmine link
         run: |
-          test="$(git rev-parse --abbrev-ref HEAD)"
-          test1=`git rev-parse --abbrev-ref HEAD`
+          test="$(git rev-parse --abbrev-ref @)"
+          test1=`git rev-parse --abbrev-ref @`
           echo $test
           echo $test1
           TICKET=$(git rev-parse --abbrev-ref HEAD | grep -Eo '^(\w+/)?(\w+[-_])?[0-9]+' | grep -Eo '(\w+[-])?[0-9]+' | tr "[:lower:]" "[:upper:]")
