--- a/.github/workflows/addPullrequest.yml
+++ b/.github/workflows/addPullrequest.yml
@@ -15,9 +15,9 @@ jobs:
         
       - name: Get TICKET and Create Redmine link
         run: |
-          test=${{github.ref_name}}
-          echo $test > test.txt
-          TICKET=$(text.txt | grep -Eo '^(\w+/)?(\w+[-_])?[0-9]+' | grep -Eo '(\w+[-])?[0-9]+' | tr "[:lower:]" "[:upper:]")
+          test=${{github.head_ref}}
+          echo $test >> $GITHUB_ENV
+          TICKET=`$text | grep -Eo '^(\w+/)?(\w+[-_])?[0-9]+' | grep -Eo '(\w+[-])?[0-9]+' | tr "[:lower:]" "[:upper:]"`
           echo $TICKET
           echo "REDMINE=https://redmine.precs.jp/issues/${TICKET}">> $GITHUB_ENV
 
