--- a/.github/workflows/addPullrequest.yml
+++ b/.github/workflows/addPullrequest.yml
@@ -15,7 +15,8 @@ jobs:
         
       - name: Get TICKET and Create Redmine link
         run: |
-          test=`${{github.head_ref}}|sed 's/_.*//'`
+          branch_name=${{github.head_ref}}
+          TICKET=$($branch_name|sed 's/_.*//')
           echo $test
           TICKET=`$text | grep -Eo '^(\w+/)?(\w+[-_])?[0-9]+' | grep -Eo '(\w+[-])?[0-9]+' | tr "[:lower:]" "[:upper:]"`
           echo $TICKET
