--- a/.github/workflows/addPullrequest.yml
+++ b/.github/workflows/addPullrequest.yml
@@ -15,9 +15,8 @@ jobs:
         
       - name: Get TICKET and Create Redmine link
         run: |
-          branch_name="${{github.head_ref}}"
-          TICKET=$($branch_name|sed 's/_.*//')
-          echo $test
+          branch_name=`${{github.head_ref}}|sed -n "///,/_/p"`
+          echo $branch_name
           TICKET=`$text | grep -Eo '^(\w+/)?(\w+[-_])?[0-9]+' | grep -Eo '(\w+[-])?[0-9]+' | tr "[:lower:]" "[:upper:]"`
           echo $TICKET
           echo "REDMINE=https://redmine.precs.jp/issues/${TICKET}">> $GITHUB_ENV
